[project]
name = "ravensarmy"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "argostranslate>=1.11.0",
    "astropy>=7.2.0",
    "babel>=2.18.0",
    "biopython>=1.87",
    "bleak>=3.0.1",
    "chromadb>=1.5.8",
    "cognee>=1.0.3",
    "csvkit>=2.2.0",
    "diffusers>=0.37.1",
    "docling>=2.91.0",
    "fastapi>=0.136.1",
    "ffmpeg-python>=0.2.0",
    "geopy>=2.4.1",
    "gitpython>=3.1.47",
    "graphine>=0.0",
    "grpcio>=1.80.0",
    "huggingface-hub>=1.12.0",
    "instructor>=1.15.1",
    "jax>=0.10.0",
    "jsonschema>=4.23.0",
    "lark>=1.3.1",
    "litellm>=1.83.13",
    "llama-cpp-python>=0.3.20",
    "lxml>=6.1.0",
    "mako>=1.3.11",
    "markdown>=3.10.2",
    "mcp[cli]>=1.27.0",
    "mempalace>=3.3.3",
    "memu>=2.1.4",
    "mistune>=3.2.0",
    "nanobot>=0.4.1",
    "nanobot-ai>=0.1.4",
    "nats-py>=2.14.0",
    "nats-server>=0.0.0",
    "networkx>=3.6.1",
    "numba>=0.65.1",
    "numpy>=2.4.4",
    "oauthlib>=3.3.1",
    "obspy>=1.5.0",
    "ollama>=0.6.1",
    "openai>=2.24.0",
    "pandas>=3.0.2",
    "paramiko>=4.0.0",
    "pocketflow>=0.0.3",
    "podman>=5.8.0",
    "psycopg>=3.3.3",
    "pydantic>=2.12.5",
    "pydy>=0.9.4",
    "pyfiglet>=1.0.4",
    "pyjwt>=2.12.1",
    "pymc>=5.28.4",
    "pymodbus>=3.13.0",
    "pymongo>=4.17.0",
    "pymysql>=1.1.2",
    "pynacl>=1.6.2",
    "pynput>=1.8.1",
    "pyotp>=2.9.0",
    "pypdf>=6.10.2",
    "pyquery>=2.0.1",
    "pyyaml>=6.0.3",
    "qutip>=5.2.3",
    "requests>=2.33.1",
    "schedule>=1.2.2",
    "scipy>=1.17.1",
    "shapely>=2.1.2",
    "simpy>=4.1.1",
    "sqlalchemy>=2.0.49",
    "statsmodels>=0.14.6",
    "sympy>=1.14.0",
    "textual>=8.2.4",
    "tinycss2>=1.4.0",
    "toml>=0.10.2",
    "transformers>=5.6.2",
]

[dependency-groups]
dev = [
    "bandit>=1.9.4",
    "chaostoolkit>=1.19.0",
    "fabric>=3.2.3",
    "flake8>=7.3.0",
    "ipython>=9.13.0",
    "marimo>=0.23.3",
    "matplotlib>=3.10.9",
    "mkdocs>=1.6.1",
    "notebook>=7.5.5",
    "nox>=2026.4.10",
    "pip-licenses>=5.5.5",
    "pipdeptree>=2.28.0",
    "rope>=1.14.0",
    "ruff>=0.15.12",
    "ty>=0.0.32",
]
